--- a/happypills/public/css/sisu.css
+++ b/happypills/public/css/sisu.css
@@ -4,9 +4,9 @@ header{
 }
 nav{
     width: 100%;
-    height: auto;
+    height: 60%;
     background: rgba(55, 55, 65, 0.667);
-    padding: 12px;
+    padding: 10px; 
 }
 i,a{
     transform: translate(0,0);
@@ -14,7 +14,7 @@ i,a{
 }
 i,.nav_a,span,img,li{
     background: transparent;
-    
+    font-family: Arial;
     transition: all 0.5s ease;
 }
 li{
@@ -79,16 +79,16 @@ p {
     float: right;
 }
 .search-container input[type=text]{
-    padding: 6px;
-    margin-top: 8px;
+    padding: 5px;
+    margin-top: -10px;
     font-size: 17px;
     border:none;
 }
 .search-container button{
     float: right;
-    padding: 6px 10px;
-    margin-top: 8px;
-    margin-right: 16px;
+    padding: 15px 10px;
+    margin-top: -6px;
+    margin-right: 10px;
     background: #ddd;
     font-size: 17px;
     border: none;
@@ -101,4 +101,13 @@ p {
 }
 .image{
     position:absolute;
+}
+.sm:fixed sm:top-0 sm:right-0 p-6 text-right z-10{
+    position: fixed;
+position: absolute;
+}
+.zas {
+    position: absolute; 
+    top: -26px;
+    right: 60px;
 }
