--- a/happypills/public/css/sisu.css
+++ b/happypills/public/css/sisu.css
@@ -6,7 +6,7 @@ nav{
     width: 100%;
     height: 60%;
     background: rgba(55, 55, 65, 0.667);
-    padding: 10px; 
+    /* padding: 10px;  */
 }
 i,a{
     transform: translate(0,0);
@@ -36,7 +36,7 @@ li{
     font-weight: bold;
     outline:none;
     text-decoration: none;
-    position: relative;
+    
     margin-left: 18px;
     margin-bottom: 18px;
 }
@@ -77,6 +77,7 @@ p {
 }
 .search-container{
     float: right;
+    padding: -5px;
 }
 .search-container input[type=text]{
     padding: 5px;
